<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_weight="5"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name_item"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/secondNameTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/second_name_item"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/roleTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/job_title"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/ageTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/age_item"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>